--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "bluehousegroup/silverstripe-data-object-version-viewer",
+    "name": "dia-nz/silverstripe-data-object-version-viewer",
     "description": "Allows viewing of version history for data objects inside of the SilverStripe CMS",
-    "homepage": "https://github.com/bluehousegroup/silverstripe-data-object-version-viewer",
+    "homepage": "https://github.com/dia-nz/silverstripe-data-object-version-viewer",
     "type": "silverstripe-module",
     "keywords": ["silverstripe", "data objects", "version"],
     "license": "BSD-3-Clause",
@@ -26,8 +26,7 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "~3.1",
-        "heyday/silverstripe-versioneddataobjects": "^2.0"
+        "silverstripe/framework": "~4.4"
     }
     
 }
